--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -12,10 +12,11 @@ import { Image } from 'astro:assets';
         Soy un apasionado de la tecnología y el desarrollo de software, siempre buscando aprender y mejorar mis habilidades.
     </p>
     <p class="text-base text-pretty opacity-80">
-        Me encanta trabajar en proyectos que desafían mis conocimientos y me permiten crecer profesionalmente.
+        Desde pequeño he sido muy curioso, siempre intentando entender cómo funcionan los programas, las aplicaciones y
+        las páginas web que utilizo. Esa curiosidad me llevó a descubrir el mundo del desarrollo.
     </p>
     <p class="text-base text-pretty opacity-80">
-        En mi tiempo libre, disfruto explorando nuevas tecnologías, contribuyendo a proyectos de código abierto y compartiendo mis conocimientos con la comunidad.
+       Disfruto colaborar en equipos donde pueda aportar ideas creativas, aprender de otros y contribuir a objetivos comunes.
     </p>
     </div>
 </div>
