--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ import { Image } from 'astro:assets';
         <li><a href="#proyectos"   class="py-2 px-3 hover:opacity-80">Proyectos</a></li>
         <li><a href="#sobre-mi"    class="py-2 px-3 hover:opacity-80">Sobre mí</a></li>
         <li><a href="#habilidades" class="py-2 px-3 hover:opacity-80">Habilidades</a></li>
-        <li><a href="mailto:javitin.dev@gmail.com" class="py-2 px-3 hover:opacity-80">Contacto</a></li>
+        <li><a href="mailto:javier.moreno.cano.work@gmail.com" class="py-2 px-3 hover:opacity-80">Contacto</a></li>
       </ul>
 
       <!-- Botón hamburguesa -->
