--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -8,8 +8,8 @@ interface Props{
 const {title, description, link, date}  = Astro.props;
 ---
 
-<div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-        <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{date}</time>
+<div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-blue-600 dark:bg-blue-600"></div>
+        <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-300">{date}</time>
         <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{title}</h3>
         <p class="opacity-80">{description}</p>
         {link && (
@@ -20,6 +20,6 @@ const {title, description, link, date}  = Astro.props;
             dark:hover:bg-gray-700 dark:focus:ring-gray-700">Saber más...
             <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" 
             viewBox="0 0 14 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4" d="M1 5h12m0 0L9 1m4 4L9 9"/>
             </svg></a>
         )}
