--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,4 @@
 ---
-import Badge from '../components/Badge.astro';
 import SocialPill from '../components/SocialPill.astro';
 import GithubIcon from '../components/icons/socials/GithubIcon.astro';
 import LinkedinIcon from '../components/icons/socials/LinkedinIcon.astro';
@@ -11,12 +10,35 @@ import { Image } from 'astro:assets';
 
 
 <div class="flex flex-col items-center md:flex-row gap-6">
-    <Image src={avatar} alt="Foto Javi" class="w-44 h-auto rounded-full" loading="eager" decoding="async"/>
+    <div class="relative inline-flex items-center justify-center">
+        <span
+        class="absolute inset-0 rounded-full border-[6px] border-emerald-400/80
+                    shadow-lg animate-pulse"
+        aria-hidden="true"
+        />
+
+        <Image
+        src={avatar}
+        alt="Foto Javi"
+        class="w-44 h-auto rounded-full"
+        loading="eager"
+        decoding="async"
+        />
+
+        <a href="mailto:javier.moreno.cano.work@gmail.com" aria-label="Disponible para trabajar">
+                        <span
+            class="absolute -bottom-3 left-1/2 -translate-x-1/2
+                        rounded-full bg-emerald-500 px-4 py-1
+                        text-xs font-semibold uppercase tracking-wide text-white
+                        shadow-md hover:bg-emerald-400 transition"
+            >
+            Open to work
+        </span>
+        </a>
+
+    </div>
 
     <div class="flex flex-col items-center justify-center text-center md:items-start md:text-start md:justfiy-start">
-        <div class="mb-2">
-            <Badge href="mailto:javitin.dev@gmail.com" class="rounded-xl inline-flex transition-transform hover:scale-110">Disponible para trabajar</Badge>
-        </div>
         <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-2">Javier Moreno Cano
 
         </h1> 
@@ -28,13 +50,13 @@ import { Image } from 'astro:assets';
             <SocialPill href="https://github.com/Javit-Dev" aria-label="GitHub">
                 <GithubIcon/> GitHub
             </SocialPill>
-            <SocialPill href="https://www.linkedin.com/" aria-label="LinkedIn">
+            <SocialPill href="https://www.linkedin.com/in/javier-moreno-cano-74a750397" aria-label="LinkedIn">
                 <LinkedinIcon/> LinkedIn
             </SocialPill>
-            <SocialPill href="mailto:javitin.dev@gmail.com" aria-label="Email">
+            <SocialPill href="mailto:javier.moreno.cano.work@gmail.com" aria-label="Email">
                 <MailIcon/> Contáctame
             </SocialPill>
-            <SocialPill href="mailto:javitin.dev@gmail.com" aria-label="CV">
+            <SocialPill href="mailto:javier.moreno.cano.work@gmail.com" aria-label="CV">
                 <CVIcon/> Descargar CV
             </SocialPill>
         </nav>
