--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const {description, title} = Astro.props;
 
 
 <!doctype html>
-<html lang="es" class="dark">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content={description}/>
@@ -21,6 +21,21 @@ const {description, title} = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+			<script is:inline>
+		const storedTheme = localStorage.getItem("theme");
+
+		if (
+			storedTheme === "dark" ||
+			(
+				!storedTheme &&
+				window.matchMedia("(prefers-color-scheme: dark)").matches
+			)
+		) {
+			document.documentElement.classList.add("dark");
+		} else {
+			document.documentElement.classList.remove("dark");
+		}
+	</script>
 	</head>
 	<body class="relative text-black dark:text-white">
 		<div
@@ -38,7 +53,7 @@ const {description, title} = Astro.props;
 
 <style is:global>
 	:root{
-		color-scheme: dark;
+		color-scheme: light dark;
 	}
 	html {
 		font-family: 'Onest Variable', system-ui, sans-serif;
