--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -18,7 +18,7 @@ const PROJECTS: ProjectItemProps[] = [
   {
     title: "RemoteTypes",
     description:
-      `Servicio de almacenamiento distribuido de listas, conjuntos y diccionarios remotos en Python usando ZeroC Ice, integrado con Apache Kafka para procesar operaciones vía eventos JSON. Incluye persistencia configurable, cliente tolerante a duplicados mediante consumer groups y batería de tests unitarios y análisis estático ejecutados en GitHub Actions.`,
+      `Proyecto del laboratorio de Sistemas Distribuidos: Servicio de almacenamiento distribuido de listas, conjuntos y diccionarios remotos en Python usando ZeroC Ice, integrado con Apache Kafka para procesar operaciones vía eventos JSON. Incluye persistencia configurable, cliente tolerante a duplicados mediante consumer groups y batería de tests unitarios y análisis estático ejecutados en GitHub Actions.`,
     image: proyecto4,
     tags: ["Python", "ZeroC Ice", "Apache Kafka", "GitHub Actions"],
     github: "https://github.com/Javit-Dev/remote-types-Distribuidos-2024",
