--- a/src/components/ProjectsItem.astro
+++ b/src/components/ProjectsItem.astro
@@ -13,8 +13,13 @@ export interface Props {
 const { title, description, image, tags, link, github } = Astro.props as Props;
 ---
 <article class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full h-full items-center justify-center border border-black/10 dark:border-white/10 rounded-2xl p-6 bg-gradient-to-b from-black/5 to-black/2 dark:bg-gradient-to-b dark:from-white/5 dark:to-white/2 hover:from-black/10 hover:to-black/5 dark:hover:from-white/10 dark:hover:to-white/5 transition">
-  <Image src={image} alt={title} class="rounded-lg w-full h-64 object-cover" loading="lazy" decoding="async"/>
-  <div class="flex flex-col gap-2">
+<div class="w-full aspect-[16/9] overflow-hidden rounded-lg">
+  <Image
+    src={image}
+    alt={title}
+    class="w-full h-full scale-100 hover:scale-105 transition-transform duration-300"
+  />
+</div>  <div class="flex flex-col gap-2">
     <h1 class="text-3xl font-semibold">{title}</h1>
     <p class="text-black/80 dark:text-white/80">{description}</p>
     <div class="flex flex-wrap gap-2">
