--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -43,7 +43,7 @@ import { Image } from 'astro:assets';
 
         </h1> 
         <h2 class="text-xl lg:text-2xl opacity-80 text-wrap max-w-[700px]">
-            Estudiante de último año de Ingeniería Informática y desarrollador web y móvil.
+            Estudiante de último año de Ingeniería Informática.
         </h2>
         
         <nav class="flex flex-wrap gap-4 mt-2 items-center justify-center md:justify-start">
