--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,9 +10,9 @@ const PROJECTS: ProjectItemProps[] = [
   {
     title: "2ISI",
     description:
-      `Dashboard para Discord que recopila datos de tus servidores mediante un Bot y los muestra en gráficos dinámicos e interactivos.`,
+      `Proyecto del laboratorio de Integración de Sistemas Informáticos: Dashboard para Discord que recopila datos de tus servidores mediante un Bot y son procesados con el servicio Azure de NLP. Este proyecto fue bastante libre en cuanto a la elección de tecnologías y tematica.`,
     image: proyecto1,
-    tags: ["Flask", "Angular", "Azure", "Docker", "gRPC", "Microservicios"],
+    tags: ["Flask", "Angular", "Azure", "Docker", "gRPC", "Microservicios", "OAuth"],
     github: "https://github.com/Javit-Dev/isi-2isi",
   },
   {
@@ -26,7 +26,7 @@ const PROJECTS: ProjectItemProps[] = [
   {
     title: "IPOkemon",
     description:
-      `Aplicación de escritorio creada en .NET y C# que permite simular batallas entre Pokémon, desarrollada para la asignatura de IPO 2.`,
+      `Proyecto del laboratorio de IPO 2: Aplicación de escritorio creada en .NET y C# que permite simular batallas entre Pokémon.`,
     image: proyecto2,
     tags: [".NET", "C#", "WPF"],
     github: "https://github.com/Javit-Dev/IPOkemon",
