--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -19,6 +19,7 @@ import IntelliJIcon from "../components/icons/skills/IntelliJIcon.astro";
 import VisualStudioIcon from "../components/icons/skills/VisualStudioIcon.astro";
 
 import DockerIcon from "../components/icons/skills/DockerIcon.astro";
+import TailwindIcon from "./icons/skills/TailwindIcon.astro";
 
 
 
@@ -44,6 +45,7 @@ const TOOLS: SkillsItemProps[] = [
 
 const WANT_TO_LEARN: SkillsItemProps[] = [
   { name: "Docker", icon: DockerIcon },
+  { name: "Tailwind CSS", icon: TailwindIcon },
 ];
 ---
 
