--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,7 +11,7 @@ const PROJECTS: ProjectItemProps[] = [
   {
     title: "2ISI",
     description:
-      `Proyecto del laboratorio de Integración de Sistemas Informáticos: Dashboard para Discord que recopila datos de tus servidores mediante un Bot y son procesados con el servicio Azure de NLP. Este proyecto fue bastante libre en cuanto a la elección de tecnologías y tematica.`,
+      `Proyecto del laboratorio de Integración de Sistemas Informáticos: Dashboard para Discord que recopila datos de tus servidores mediante un Bot y son procesados con el servicio Azure de NLP. Este proyecto fue bastante libre en cuanto a la elección de tecnologías y temática.`,
     image: proyecto1,
     tags: ["Flask", "Angular", "Azure", "Docker", "gRPC", "Microservicios", "OAuth", "JWT"],
     github: "https://github.com/Javit-Dev/isi-2isi",
